# dumpcore-simple

./: dumpcore-simple.cabal  readme.md
Compiler/Plugin/: DumpSTG.hs  Dumpcore.lhs  Trace.hs
Compiler/Plugin/DumpSTG/: Pretty.hs
Compiler/Plugin/Dumpcore/: Pretty.lhs
Dumpcore/Simple/: Plugin.lhs
test/: Functions.hs  test.hs
