name:
  dumpcore-simple
version:
  0.0.1
synopsis:
  A GHC plugin to dump a simplified representation
  of intermediate representation.
description:
  See readme.md for description.
category:
  project
homepage:
  https://github.com/remyoudompheng/dumpcore-simple
license:
  BSD3
license-file:
  LICENSE
author:
  Rémy Oudompheng
maintainer:
  remy@archlinux.org
copyright:
  2018 Rémy Oudompheng
build-type:
  Simple
cabal-version:
  >=1.14
extra-source-files:
  readme.md
  stack.yaml

library
  default-language:
    Haskell2010
  ghc-options: -Wall
  hs-source-dirs:

  exposed-modules:
    Compiler.Plugin.Dumpcore,
    Compiler.Plugin.Dumpcore.Pretty,
    Compiler.Plugin.Trace

  build-depends:
    base >= 4.7 && < 5,
    bytestring,
    directory,
    filepath,
    ghc,
    text,
    time,
    pretty

source-repository head
  type:
    git
  location:
    https://github.com/remyoudompheng/dumpcore-simple
